[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "rng_rava"
version = "3.0.0"
authors = [{name="Gabriel Guerrer"},]
description = "Python driver for the RAVA RNG device"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyserial",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://rava-rng.org"
Documentation = "https://docs.rava-rng.org"
Repository = "https://github.com/gabrielguerrer/rava_driver_py"
Author = "https://gabrielguerrer.com"
